--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-fast-marquee": "^1.6.5",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-multi-carousel": "^2.8.6",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
