--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
-    "react-multi-carousel": "^2.8.6",
-    "slick-carousel": "^1.8.1"
+    "react-multi-carousel": "^2.8.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
